# utf-cli

./: LICENSE.txt  README.md  demo.cast  pyproject.toml  utf.py
tests/: __init__.py
utf/: __init__.py  __main__.py  generate_db.py  utf.tcss  utf8.db
