[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utf-cli"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Trey Hunner" },
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "textual",
    "pyperclip",
    "platformdirs",
    "darkdetect",
]

[project.urls]
Documentation = "https://github.com/treyhunner/utf-cli#readme"
Issues = "https://github.com/treyhunner/utf-cli/issues"
Source = "https://github.com/treyhunner/utf-cli"

[project.scripts]
utf = "utf.__main__:main"

[tool.hatch.version]
path = "utf/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["utf"]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "textual-dev",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.coverage.run]
source_pkgs = ["utf", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
utf = ["utf"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
]
